# audio-transcribe

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt
app/: audio.py  gemini.py  main.py  speech.py  storage.py
app/templates/: index.html
